[tool.poetry]
name = "test-renovate"
version = "0.1.0"
description = ""
authors = ["Justin Anderson <justinwarrenanderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "0.982"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
